<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/classassignment_head_tv_data_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="今天"
            android:textColor="#FB7299" />

        <TextView
            android:id="@+id/classassignment_head_tv_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:paddingLeft="15dp"
            android:text="2015/9/8"
            android:textColor="#b2b2b2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/classassignment_chinese_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp" >

        <TextView
            android:id="@+id/classassignment_chinese_tv_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="语文：练习卷一，阅读（三）（四）"
            android:textColor="#b2b2b2" />

        <CheckBox
            android:id="@+id/classassignment_chinese_cb_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:focusable="false" />

        <ImageView
            android:id="@+id/classassignment_chinese_iv_modify"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/course_chinese"
            android:src="@drawable/ic_launcher"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/classassignment_chinese_iv_finish_tag"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/classassignment_math_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp" >

        <TextView
            android:id="@+id/classassignment_math_tv_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="语文：练习卷一，阅读（三）（四）"
            android:textColor="#b2b2b2" />

        <CheckBox
            android:id="@+id/classassignment_math_cb_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:focusable="false" />

        <ImageView
            android:id="@+id/classassignment_math_iv_modify"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/course_math"
            android:src="@drawable/ic_launcher"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/classassignment_math_iv_finish_tag"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/classassignment_english_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp" >

        <TextView
            android:id="@+id/classassignment_english_tv_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="语文：练习卷一，阅读（三）（四）"
            android:textColor="#b2b2b2" />

        <CheckBox
            android:id="@+id/classassignment_english_cb_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:focusable="false" />

        <ImageView
            android:id="@+id/classassignment_english_iv_modify"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/course_english"
            android:src="@drawable/ic_launcher"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/classassignment_english_iv_finish_tag"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/classassignment_physics_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp" >

        <TextView
            android:id="@+id/classassignment_physics_tv_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="语文：练习卷一，阅读（三）（四）"
            android:textColor="#b2b2b2" />

        <CheckBox
            android:id="@+id/classassignment_physics_cb_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:focusable="false" />

        <ImageView
            android:id="@+id/classassignment_physics_iv_modify"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/course_physics"
            android:src="@drawable/ic_launcher"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/classassignment_physics_iv_finish_tag"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/classassignment_chemistry_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp" >

        <TextView
            android:id="@+id/classassignment_chemistry_tv_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="语文：练习卷一，阅读（三）（四）"
            android:textColor="#b2b2b2" />

        <CheckBox
            android:id="@+id/classassignment_chemistry_cb_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:focusable="false" />

        <ImageView
            android:id="@+id/classassignment_chemistry_iv_modify"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/course_chemistry"
            android:src="@drawable/ic_launcher"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/classassignment_chemistry_iv_finish_tag"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/classassignment_biology_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp" >

        <TextView
            android:id="@+id/classassignment_biology_tv_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="语文：练习卷一，阅读（三）（四）"
            android:textColor="#b2b2b2" />

        <CheckBox
            android:id="@+id/classassignment_biology_cb_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:focusable="false" />

        <ImageView
            android:id="@+id/classassignment_biology_iv_modify"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/course_biology"
            android:src="@drawable/ic_launcher"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/classassignment_biology_iv_finish_tag"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/classassignment_geography_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp" >

        <TextView
            android:id="@+id/classassignment_geography_tv_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="语文：练习卷一，阅读（三）（四）"
            android:textColor="#b2b2b2" />

        <CheckBox
            android:id="@+id/classassignment_geography_cb_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:focusable="false" />

        <ImageView
            android:id="@+id/classassignment_geography_iv_modify"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/course_geography"
            android:src="@drawable/ic_launcher"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/classassignment_geography_iv_finish_tag"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/classassignment_history_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp" >

        <TextView
            android:id="@+id/classassignment_history_tv_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="语文：练习卷一，阅读（三）（四）"
            android:textColor="#b2b2b2" />

        <CheckBox
            android:id="@+id/classassignment_history_cb_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:focusable="false" />

        <ImageView
            android:id="@+id/classassignment_history_iv_modify"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/course_history"
            android:src="@drawable/ic_launcher"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/classassignment_history_iv_finish_tag"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/classassignment_politics_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp" >

        <TextView
            android:id="@+id/classassignment_politics_tv_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="语文：练习卷一，阅读（三）（四）"
            android:textColor="#b2b2b2" />

        <CheckBox
            android:id="@+id/classassignment_politics_cb_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:focusable="false" />

        <ImageView
            android:id="@+id/classassignment_politics_iv_modify"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/course_politics"
            android:src="@drawable/ic_launcher"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/classassignment_politics_iv_finish_tag"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>